# stackage-view

./: .dir-locals.el  .ghci  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  fpview.cabal  stack.yaml  stackage-view.cabal
app/: Client.hs  Server.hs
client/: Model.hs  Types.hs  View.hs
client/GHCJS/: Yesod.hs
client/React/: Ace.hs  Bootstrap.hs  Lucid.hs
client/View/: ChooseTargets.hs  Failed.hs  Loaded.hs  LoadingProject.hs  Starting.hs  Template.hs
config/: routes
deploy/: Procfile
dev-scripts/: install-ghcjs-deps.sh
dev-scripts/internal/: install-ghcjs-deps.sh
server/: Application.hs  Foundation.hs  Session.hs  Settings.hs  devel.hs
server/Controller/: Home.hs
server/FPView/: Cabal.hs  Defaults.hs  Git.hs  Types.hs
server/Filesystem/Path/: Find.hs
server/Handler/: Client.hs  Command.hs  Home.hs
server/Stackage/View/: Cabal.hs  Defaults.hs  Git.hs  Types.hs
shared/: SharedTypes.hs
src/: DevelMain.hs  Foundation.hs  Import.hs  Session.hs  SharedTypes.js_hi  SharedTypes.js_o
src/Client/: Home.hs  Home.js_hi  Home.js_o
src/Control/Concurrent/STM/: SwapQueue.hs  SwapQueue.js_hi  SwapQueue.js_o
src/Filesystem/: Loc.hs
src/GHCJS/: Yesod.hs  Yesod.js_hi  Yesod.js_o
src/Handler/: Home.hs
src/React/: Ace.hs  Ace.js_hi  Ace.js_o
src/Settings/: StaticFiles.hs
src/Yesod/: GHCJS.hs
templates/: default-layout-wrapper.hamlet  home.lucius  homepage.julius  homepage.lucius
