name:                stackage-view
synopsis:            General project viewer
version:             0.0.1
description:         FP Complete project viewer
license:             AllRightsReserved
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@fpcomplete.com
copyright:           2014-2015 FP Complete Corporation
category:            Development
homepage:            https://github.com/fpco/stackage-view
cabal-version:       >= 1.8
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: server/, shared/
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Command
                     Yesod.GHCJS
                     SharedTypes
                     Session

    exposed-modules: Stackage.View.Cabal, Stackage.View.Types, Stackage.View.Defaults, Stackage.View.Git

    other-modules:     Filesystem.Path.Find, Filesystem.Loc

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.4
                 , wai-logger                    >= 2.2        && < 2.3
                 , exceptions                    >= 0.6.1
                 , filepath
                 , temporary
                 , transformers
                 , process

                 , Cabal >= 1.18.1.3
                 , bytestring >= 0.10.4.0
                 , conduit >= 1.2.0.2
                 , conduit-extra >= 1.1.4
                 , containers >= 0.5.5.1
                 , data-default >= 0.5.3
                 , hashable >= 1.2.2.0
                 , ide-backend >= 0.9.0
                 , monad-loops >= 0.4.2.1
                 , shake >= 0.13.4
                 , syb >= 0.4.2
                 , system-fileio >= 0.3.14
                 , system-filepath >= 0.4.12
                 , text >= 1.1.1.3
                 , stm
                 , file-embed
                 , attoparsec
                 , mtl
                 , resourcet
                 , conduit-combinators

                 , unordered-containers
                 , vector

                 -- for DevelMain
                 , foreign-store

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         stackage-view
    if flag(library-only)
        Buildable: False

    main-is:           Server.hs
    hs-source-dirs:    app/
    build-depends:     base
                     , stackage-view
                     , optparse-applicative
                     , yesod
                     , warp

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    build-depends: base
                 , stackage-view
                 , yesod-test >= 1.4 && < 1.5
                 , yesod-core
                 , yesod
                 , hspec
